2003-06-07  Gregory John Casamento <greg_casamento@yahoo.com>

	* Resources/GormClassInspector.gorm: Moved buttons into
	tab view.
	* GormClassInspector.[hm]: Added new methods and ivars for
	buttons in each tab view.
	* GormDocument.m: Added code to prevent addition of outlets
	to FirstResponder.
	* GormClassManager.m: Removed code which prevented adding
	actions to firstresponder.  MOSX is able to add actions, but not
	outlets to FirstResponder.  Aldo modified call made from
	parseHeader in the class manager to add all action to
	FirstResponder when importing the class.

2003-06-06  Gregory John Casamento <greg_casamento@yahoo.com>

	* Resources/GormClassInspector.gorm: New inspector
	* GormClassInspector.[hm]: New inspector classes
	* GormDocument.m: added delegate method to select class 
	in GormClassEditor when selected in the outline/classes view.
	* GormClassManager.m: Added "touch" to appropriate methods
	to fix bug which caused document to not refect that it has
	been edited when a outlet/action is added.

2003-06-01  Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/2Controls/GormNSButtonInspector.gorm: Added 
	key equivalent pulldown
	* Palettes/2Controls/inspectors.m: Added code to handle
	new pulldown.
	
2003-06-01  Gregory John Casamento <greg_casamento@yahoo.com>

	* GormPreferences.[hm]: Removed.  These were superceded
	by the GormPrefController.

2003-06-01  Gregory John Casamento <greg_casamento@yahoo.com>

	* GormTabViewInspector.gorm: Added new images to complete the
	tab style matrix buttons.
	* Images/tabtop_nib.tiff: New image
	* Images/tabbot_nib.tiff: New image
	* GNUmakefile: added images to resources

2003-05-31  Gregory John Casamento <greg_casamento@yahoo.com>

	* GormScrollViewAttributesInspector.m: Added code to make changes
	to a scroll view.  The inspector is now functional.
	* GormScrollViewAttributesInspector.gorm: Added connections
	to window.
	* Palettes/3Containers/inspectors.m: Commented out dummy inspector